--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
         .hamburger-menu {
             position: fixed;
-            top: 70px;
-            right:110px;
+            top: 40px;
+            left:60px;
             cursor: pointer;
             height:160px;
         }
